syntax = "proto3";

option java_package = "com.wemaka.weatherapp.store.proto";
option java_multiple_files = true;
option java_outer_classname = "PressureUnitProto";

enum PressureUnitProto {
  MMHG = 0; // Millimeters of mercury column
  HPA = 1; // Hectopascals
  INHG = 2; // Inches of mercury column
}